# Standalone (its own workspace root) so building it from the parent crate's
# integration test does not entangle it with any surrounding Cargo workspace.
[workspace]

[package]
name = "manual-signaling-test-guest"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# `wit-bindgen` generates the guest bindings and provides the async `stream`
# helpers (`wit_stream`, `spawn`) the test guest uses.
wit-bindgen = { version = "0.57", features = ["async", "async-spawn"] }
futures = { version = "0.3", default-features = false, features = ["async-await"] }

[profile.release]
opt-level = "s"
lto = true
